@@ -7,6 +7,7 @@ Version 1.9.0-svn:
    * Updated translations:
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead.
+   * Renamed [unit][status] healable to unhealable so it can default to 'no'
  * Miscellaneous and bug fixes:
    * Defaulted log level to warning again
    * Removed the unused gui2 menu bar
